<resources>
    <string name="app_name">SoKind</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_title">모두를 웃게하는 똑똑한\nCS교육 솔루션</string>
    <string name="start">시작하기</string>
    <string name="splash_content">이미 계정이 있으신가요? 로그인하기</string>
    <string name="network_connect">네트워크가 연결되지 않았습니다.\nWi-Fi 또는 데이터를 활성화 해주세요.</string>
    <string name="underline_spaces">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="permission_title">필수 접근권한</string>
    <string name="permission_content">쏘카인드 앱을 이용하기 위해\n다음 권한의 허용이 필요합니다.</string>
    <string name="camera">카메라</string>
    <string name="camera_permission">AI 교육을 위한 영상분석시 필요합니다.</string>
    <string name="gallery">갤러리</string>
    <string name="gallery_permission">프로필 사진 등록 및 변경시 필요합니다.</string>
    <string name="mic">마이크</string>
    <string name="mic_permission">AI 교육을 위한 음석분석시 필요합니다.</string>
    <string name="permit">허용</string>
    <string name="show_permit">개인정보 처리방침 보기</string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="pw_new">변경할 비밀번호</string>
    <string name="pw_check">비밀번호 확인</string>
    <string name="email">Email</string>
    <string name="email_">내 정보에 등록된 이메일 인증</string>
    <string name="find_id">아이디찾기</string>
    <string name="find_pw">비밀번호를 잊으셨나요?</string>
    <string name="login">로그인</string>
    <string name="join">회원가입하기</string>
    <string name="code">인증번호</string>
    <string name="next">다음</string>
    <string name="continue_text">계속하기</string>
    <string name="check">확인</string>
    <string name="change">변경하기</string>
    <string name="cancel">취소</string>
    <string name="enterprise_title">기업명</string>
    <string name="enterprise_code">기업코드</string>
    <string name="enterprise_department">소속(부서 또는 점포)</string>
    <string name="enterprise_position">직책</string>
    <string name="gender">성별</string>
    <string name="male">남성</string>
    <string name="female">여성</string>
    <string name="yes">예</string>
    <string name="no">아니요</string>
    <string name="edu_do">학습하기</string>
    <string name="edu_fin">학습완료</string>
    <string name="edu_analysis">분석중</string>
    <string name="edu_analysis_fail">분석불가</string>
    <string name="pw_error">현재 비밀번호가 일치하지 않습니다.</string>
    <string name="login_pw_error">8자~20자 영문 대 소문자, 숫자 특수문자를 사용해주세요.</string>
    <string name="join_pw_error">특수문자는 ‘! @ # $ % ^ &amp; *’만 사용 가능합니다.</string>
    <string name="pw_check_error">두 비밀번호가 일치하지 않습니다.</string>
    <string name="email_error">이메일 형식이 아닙니다. 입력하신 내용을 확인 하신 후 다시 한번 시도해주세요!</string>
    <string name="code_error">인증번호가 일치하지 않습니다. 입력하신 내용을 확인 하신 후 다시 한번 시도해주세요!</string>
    <string name="find_id_content_1">회원가입시 입력하신 이메일을 입력해주세요!</string>
    <string name="find_id_content_2">%s 으로 찾은 아이디입니다. 개인정보 보호를 위해 아이디의 일부는 *로 표기됩니다. 이메일 인증 후에 아이디 찾기가 완료됩니다.</string>
    <string name="find_id_content_3">아이디 찾기가 완료되었습니다.</string>
    <string name="find_pw_title">비밀번호 재설정</string>
    <string name="find_pw_content1">이메일로 비밀번호 재설정 링크를 보내드립니다.\n가입할 때 입력하신 이메일 주소를 입력해주세요.</string>
    <string name="find_pw_content2">비밀번호 재설정 메일을 발송했습니다!:)</string>
    <string name="name">이름</string>
    <string name="join_title">쏘카인드를\n시작해볼까요?</string>
    <string name="join_content_1">먼저 재직중인 기업명을 검색해주세요!:)</string>
    <string name="join_content_2">회원님의 정보를 입력해주세요!:)</string>
    <string name="join_content_3">가입 완료까지 얼마 안 남았어요!:D</string>
    <string name="join_content_4">마지막입니다! 회원가입을 완료해주세요!:D</string>
    <string name="id_hint">아이디를 입력해주세요.</string>
    <string name="pw_hint">비밀번호를 입력해주세요.</string>
    <string name="hint_pw">비밀번호 최소 8자~최대20자</string>
    <string name="hint_pw_check">비밀번호 다시 한번 입력해주세요.</string>
    <string name="hint_name">이름을 입력해주세요.</string>
    <string name="hint_email">이메일 주소 전체를 입력해주세요.</string>
    <string name="hint_code">6자리 인증번호를 입력해주세요.</string>
    <string name="hint_enterprise_code">기업 코드를 입력해주세요.</string>
    <string name="hint_enterprise_code_error">기업코드가 일치하지 않습니다. 다시 확인해주세요.</string>
    <string name="hint_join_enterprise">기업명을 검색해주세요.</string>
    <string name="hint_join_id_short">아이디 6~12자 영문,숫자,기호(-_)</string>
    <string name="hint_join_id">아이디 6~12자 영문,숫자,기호(-_)만 사용 가능합니다.</string>
    <string name="terms_agree_title">약관동의</string>
    <string name="terms_agree_all">전체동의 (선택사항 포함)</string>
    <string name="terms_agree_1">[필수]만 14세 이상입니다.</string>
    <string name="terms_agree_2">[필수]이용약관 동의.</string>
    <string name="terms_agree_3">[필수]개인정보 수집 및 이용 동의.</string>
    <string name="terms_agree_4">[선택]이벤트, 서브스안내 수신 동의.</string>
    <string name="join_finish">가입하기</string>
    <string name="boarding_1"><![CDATA[환영합니다, <font><b>%s님!</b></font>]]></string>
    <string name="boarding_content1">
        인공지능 CS교육 솔루션 쏘카인드는 우리 기업의\n
        CS교육 매뉴얼에 맞게 고객 만족 교육을\n
        단계별로 학습할 수 있어요.
    </string>
    <string name="boarding_2"><b>경험 중심</b>의 상황응대</string>
    <string name="boarding_content2">
        CS 전문가의 ‘컴플레인 응대법’ 커리큘럼\n
        기반 교육 컨텐츠로, 고객 불만 상황에 대응하는 법을\n
        훈련할 수 있어요.
    </string>
    <string name="boarding_3">나의 <b>서비스는 몇 점?</b></string>
    <string name="boarding_content3">
        교육생들은 교육을 마친 후\n
        AI 기반의 학습레포트를 통해 점수를\n
        확인할 수 있습니다.
    </string>
    <string name="dialog_profile">%s님,\n프로필 이미지를 변경해보세요.</string>
    <string name="dialog_logout">정말 로그아웃을 하시겠어요?</string>
    <string name="dialog_secession">정말 탈퇴 신청을 하시겠어요?</string>
    <string name="dialog_error">교육 분석이 원활하게 이루어지지 않았습니다.</string>
    <string name="go_retry">교육 다시하기</string>
    <string name="go_list"><u>교육리스트로 돌아가기</u></string>
    <string name="dialog_secession_request_title">탈퇴 신청을 한 회원입니다.\n관리자의 탈퇴 승인 전까지 서비스 이용이 제한됩니다.</string>
    <string name="dialog_secession_title">탈퇴가 완료된 회원입니다.\n그동안 쏘카인드 서비스를 이용해 주셔서 감사합니다.</string>
    <string name="dialog_secession_login_content">탈퇴 신청일시: %s\n탈퇴 승인여부: 미승인</string>
    <string name="dialog_secession_join">신규회원가입</string>
    <string name="home_hello">안녕하세요,</string>
    <string name="home_name">%s!</string>
    <string name="continue_cs">CS교육 이어하기</string>
    <string name="basic_cs">기본응대 CS교육</string>
    <string name="deep_cs">상황응대 CS교육</string>
    <string name="more">더보기</string>
    <string name="no_base_edu">등록된 기본응대 CS교육 컨텐츠가 없습니다.</string>
    <string name="no_deep_edu">기본응대 CS교육을 전부 이수한 후\n학습을 시작해보세요.</string>
    <string name="guide">가이드</string>
    <string name="speech">말</string>
    <string name="expression">표정</string>
    <string name="posture">자세</string>
    <string name="guide_tab_1">회사 메뉴얼</string>
    <string name="guide_tab_2">기본응대CS</string>
    <string name="guide_tab_3">상황응대CS</string>
    <string name="guide_base_speech_title">손님들이 원하는 목소리!</string>
    <string name="guide_base_speech_sub_title">나의 목소리는 어떤지 쏘카인드를 통해\n억양, 톤, 빠르기를 확인해보세요!</string>
    <string name="guide_base_speech_content">쏘카인드는 친절한 CS를 위해 태어난 서비스입니다.\n손님들은 밝고 신뢰도 있는 목소리를 선호합니당:)</string>
    <string name="guide_base_expression_title">서비스 직원의 생명은 표정!</string>
    <string name="guide_base_expression_sub_title">
        CS교육생이 쏘카인드에서 교육을 받는 동안\n
        놀람, 공포, 행복, 슬픔, 화남, 중립\n
        6가지 감정의 평균 비율을 안면분석을 통해 체크합니다.
    </string>
    <string name="guide_base_expression_content">표정은 이런게 좋아요! :)</string>
    <string name="guide_base_posture_title">바른 자세로 이야기해요!</string>
    <string name="guide_base_posture_sub_title">허리를 펴고 손님의 눈을 바라보아요!\n쏘카인드는 잘못된 자세를 바로잡아드려요!</string>
    <string name="guide_base_posture_content">자세는 이런게 좋아요! :)</string>
    <string name="cs">CS교육</string>
    <string name="cs_day">교육 %s일차</string>
    <string name="cs_continue">다음교육 바로 이어하기</string>
    <string name="cs_tab_title">우리회사 CS교육 과정</string>
    <string name="deep_cs_no_title">수강할 수 있는 상황응대 CS교육이 없어요!</string>
    <string name="deep_cs_no_content">기본응대 CS교육을 전부 이수한 후\n학습을 시작해보세요.</string>
    <string name="edu_ready_text">
        조용하고, 밝은 장소에서 카메라를
        \n눈높이에 맞춰 고정시킨 후, 화면에 비치는
        \n김친절님의 눈을 바라보며 교육을 시행해주세요.
    </string>
    <string name="edu_practice"><u>AI교육 전 연습이 필요하신가요?</u></string>
    <string name="edu_start_text"><u>준비가 되셨다면 위 마이크 버튼을 눌러주세요!</u></string>
    <string name="edu_ing_text">교육중입니다.</string>
    <string name="edu_end_text"><u>대답을 마치시려면 위 버튼을 눌러주세요</u></string>
    <string name="edu_finish_text_1">수고하셨습니다.</string>
    <string name="edu_finish_text_2">교육이 종료되었습니다.</string>
    <string name="edu_finish_report">분석결과 보기</string>
    <string name="edu_finish_list">CS교육 목록으로</string>
    <string name="edu_finish_next">다음 교육을 이어서 진행할까요?</string>
    <string name="edu_main">메인으로</string>
    <string name="edu_count">00:0%s</string>
    <string name="report">리포트</string>
    <string name="lv">Lv. %s</string>
    <string name="point">%s점</string>
    <string name="per">%s%%</string>
    <string name="date">교육일자 : %s</string>
    <string name="no_report_title">%s님 CS교육을 시작해보세요!</string>
    <string name="no_report_content">현재 우리 기업의 CS교육을 듣기 전이므로,\n학습리포트가 존재하지않습니다.\n교육을 시작해보세요!</string>
    <string name="report_title">학습리포트</string>
    <string name="report_kind">현재까지 종합친절도</string>
    <string name="report_analysis_count"><u>%s개 분석중</u></string>
    <string name="report_quality">고객응대 퀄리티</string>
    <string name="report_detail">교육별 상세 리포트</string>
    <string name="report_total_point">종합점수</string>
    <string name="hundred">100점</string>
    <string name="zero">0점</string>
    <string name="report_kind_point_1">내 <font color='#6967F9'><b>CS점수</b></font>는</string>
    <string name="report_kind_point_2">평균보다</string>
    <string name="report_kind_point_3">높아요</string>
    <string name="cdata"><![CDATA[%s]]></string>
    <string name="report_sample">김친절 님은 AI 교육평가 결과 CS 종합등급은 <font color='#6967F9'>A</font> 입니다.</string>
    <string name="report_detail_title">상세 리포트</string>
    <string name="total">종합</string>
    <string name="report_video">교육영상</string>
    <string name="total_comment_1">
        해당 교육 CS교육 점수 산정 결과 %s점으로\n
        평균보다 %s점 높은 점수입니다.\n
        상위 %s에 해당합니다
    </string>
    <string name="total_comment_2">
        해당 교육 CS교육 점수 산정 결과 %s점으로\n
        평균과 같은 점수입니다.\n
        상위 %s에 해당합니다
    </string>
    <string name="total_comment_3">
        해당 교육 CS교육 점수 산정 결과 %s점으로\n
        평균보다 %s점 낮은 점수입니다.\n
        상위 %s에 해당합니다
    </string>
    <string name="ment">멘트</string>
    <string name="accent">억양</string>
    <string name="tone">목소리 톤</string>
    <string name="tone_content">이 교육에서 %s님 목소리는 ‘%s’톤(Tone)에 가까워요!</string>
    <string name="speed">말 빠르기</string>
    <string name="repeat_txt">다시 들어보기</string>
    <string name="speed_sps">syllable per second\n초당 음절 수</string>
    <string name="deep_cs_report">상황응대 CS분석</string>
    <string name="deep_cs_report_sample">손님이 “제품이 어딨는지 여쭤봐도 제대로 안내도 안해주시고 직원들끼리 떠들고만 있네요.” 라고 불만을 표하는 상황에서 김친절님은 손님에게 ‘상황 살피기’, ‘상황에 대한 인정’, ‘공감하기’, ‘개선의 표현’ 을 사용하여 고객이 만족할 수 있는 올바른 응답을 하였습니다.</string>
    <string name="complain">컴플레인 대처능력</string>
    <string name="speech_kind">언어성향</string>
    <string name="speech_kind_comment_1">%s님은 %s 성향의 어휘를 많이 사용한 것으로 확인됩니다.</string>
    <string name="speech_kind_comment_2">언어 성향 그래프는 인공지능이 교육생의 어휘를 분석하여 긍정, 부정, 중립의 정도를 나타냅니다.</string>
    <string name="surprise">놀람</string>
    <string name="glum">딱딱함</string>
    <string name="excitement">흥분</string>
    <string name="sympathy">공감</string>
    <string name="bright">밝음</string>
    <string name="fear">두려움</string>
    <string name="expression_txt_1">%s님은 해당 교육에서</string>
    <string name="expression_txt_2">표정이 많이 드러났어요!</string>
    <string name="expression_txt_3">교육영상에서 놀람, 두려움, 짜증, 밝음, 공감, 흥분, 딱딱함 7가지 감정의 정도입니다.\n표정, 안면분석을 통해 친절도와 감정상태를 보여줍니다.</string>
    <string name="expression_txt_4">*두려움, 짜증, 흥분의 표정은 친절도 평가에 점수\n 감점 요인으로 적용합니다.</string>
    <string name="view_point">시선분포</string>
    <string name="view_point_txt_1">%s님은 </string>
    <string name="view_point_txt_2">에 시선이 </string>
    <string name="view_point_txt_3">가장 많이 머물렀네요!</string>
    <string name="alert">알림</string>
</resources>