<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.join.fourth.JoinFourthFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_back"
            style="@style/back_bt_icon"
            android:src="@drawable/icon_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_join_title"
            style="@style/black_18_700"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/join_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_back" />

        <TextView
            android:id="@+id/tv_join_content"
            style="@style/gray_14_400"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/join_content_4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_join_title" />

        <LinearLayout
            android:id="@+id/ll_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_join_content">

            <TextView
                android:id="@+id/tv_gender_title"
                style="@style/lightGray_12_400"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <RadioButton
                    android:id="@+id/cb_male"
                    style="@style/CheckBox.Selector"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/custom_gender_selector_l"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/cb_female"
                    style="@style/CheckBox.Selector"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/custom_gender_selector_r"
                    android:text="@string/female" />
            </RadioGroup>

            <TextView
                style="@style/black_16_500"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/terms_agree_title" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_terms_all"
                style="@style/CheckBox.Check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/terms_agree_all" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_terms_1"
                style="@style/CheckBox.Check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:text="@string/terms_agree_1" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_terms_2"
                style="@style/CheckBox.Check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:text="@string/terms_agree_2" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_terms_3"
                style="@style/CheckBox.Check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:text="@string/terms_agree_3" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_terms_4"
                style="@style/CheckBox.Check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:text="@string/terms_agree_4" />
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_finish"
            style="@style/Button.Fill.Main.Selector"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="30dp"
            android:enabled="false"
            android:text="@string/join_finish"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>