<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.join.second.JoinSecondFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:padding="10dp"
                android:src="@drawable/icon_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_join_title"
                style="@style/black_18_700"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/join_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_back" />

            <TextView
                android:id="@+id/tv_join_content"
                style="@style/gray_14_400"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/join_content_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_join_title" />

            <LinearLayout
                android:id="@+id/ll_container_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_join_content">

                <TextView
                    android:id="@+id/tv_name_title"
                    style="@style/lightGray_12_400"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/et_name_input"
                    style="@style/EditText.Input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/hint_name"
                    android:imeOptions="actionNext"
                    android:maxLength="20"
                    android:nextFocusDown="@+id/et_email_input" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="27dp" />

                <TextView
                    android:id="@+id/tv_email_title"
                    style="@style/lightGray_12_400"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/et_email_input"
                    style="@style/EditText.Input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/hint_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@+id/et_code_input" />

                <TextView
                    android:id="@+id/tv_error_email"
                    style="@style/orange_12_400"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/email_error"
                    android:visibility="gone" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="27dp" />

                <TextView
                    android:id="@+id/tv_code_title"
                    style="@style/lightGray_12_400"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/code" />

                <EditText
                    android:id="@+id/et_code_input"
                    style="@style/EditText.Input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/hint_code"
                    android:maxLength="6" />

                <TextView
                    android:id="@+id/tv_error_code"
                    style="@style/orange_12_400"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/code_error"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_container_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_join_content">

                <TextView
                    android:id="@+id/tv_id_title"
                    style="@style/lightGray_12_400"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id" />

                <EditText
                    android:id="@+id/et_id_input"
                    style="@style/EditText.Input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/hint_join_id_short"
                    android:maxLength="12" />

                <TextView
                    android:id="@+id/tv_error_id"
                    style="@style/orange_12_400"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/hint_join_id"
                    android:visibility="gone" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_next"
                style="@style/Button.Fill.Main.Selector"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="30dp"
                android:enabled="false"
                android:text="@string/continue_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>